<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.csie.ntut.hw1.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sex"
        android:textSize="25sp" />

    <Spinner
        android:id="@+id/spnSex"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:entries="@array/sex_list"
        android:prompt="@string/spn_sex_list"
        android:spinnerMode="dialog"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textSize="25sp" />

    <RadioGroup
        android:id="@+id/radGrpAge"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <RadioButton
            android:id="@+id/ageRange1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/below30" />

        <RadioButton
            android:id="@+id/ageRange2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/between30to40" />

        <RadioButton
            android:id="@+id/ageRange3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/over40" />

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/family_member"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/FamilyMemberText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/family_text_default"
        android:textSize="18sp" />

    <NumberPicker
        android:id="@+id/NumberPicker"
        android:layout_width="match_parent"
        android:layout_height="45dp" />

    <Button
        android:id="@+id/btnOK"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:text="@string/btn_ok" />

    <TextView
        android:id="@+id/txtSug"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/suggestion"
        android:textAlignment="center"
        android:textSize="25sp" />
</LinearLayout>
